fixed contrast errors

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@
     font-weight: 900;
     font-size: 20px;
     line-height: 27px;
-    color: #609966;
+    color: #40513B;
   }
 
   .photo-credit{
@@ -148,7 +148,7 @@
     font-weight: 500;
     font-size: 18px;
     line-height: 27px;
-    color: #D0D0D0;
+    color: #565656;
     text-align: center;
     align-self: center;
   }
@@ -460,7 +460,7 @@
   .photo-credit {
     display: none;
   }
-  
+
 }
 
 /*MEDIA QUEARY FÖR TABLET-STORLEK*/
